create travis configure

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,22 +10,20 @@ language: php
 
 #versi bahasa yang digunakan
 php:
-	- 7.1
+    - 7.1
 	
 #Tentukan branch
 branches:
-	only:
-		- master 
-		#-> QA/staging
-		- develop 
-		#-> DevServer
+    only:
+        - master #-> QA/staging
+        - develop #-> DevServer
 		
 #before install
 before_install:
-	- wget https://phar.phpunit.de/phpunit-6.5.phar
-	- chmod +x phpunit-6.5.phar
-	- sudo mv phpunit-6.5.phar /usr/local/bin/phpunit
-	- phpunit --version
+    - wget https://phar.phpunit.de/phpunit-6.5.phar
+    - chmod +x phpunit-6.5.phar
+    - sudo mv phpunit-6.5.phar /usr/local/bin/phpunit
+    - phpunit --version
 #install
 install:
 #before script -> sebelum melakuan main execution
