--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,10 @@ php:
 #Tentukan branch
 branches:
     only:
-        - master #-> QA/staging
-        - develop #-> DevServer
+        - master 
+#-> QA/staging
+        - develop 
+#-> DevServer
 		
 #before install
 before_install:
