--- a/.travis.yml
+++ b/.travis.yml
@@ -15,24 +15,16 @@ php:
 #Tentukan branch
 branches:
     only:
-        - master 
-#-> QA/staging
-        - develop 
-#-> DevServer
+        - master #-> QA/staging
+        - develop #-> DevServer
 		
-#before install
-before_install:
-    - wget https://phar.phpunit.de/phpunit-6.5.phar
-    - chmod +x phpunit-6.5.phar
-    - sudo mv phpunit-6.5.phar /usr/local/bin/phpunit
-    - phpunit --version
-#install
-
-install:
-#before script -> sebelum melakuan main execution
-
+# jalankan install package dll
 before_script:
-
+    - cp .env.travis .env
+    - composer install --no-interaction
+    - php artisan key.generate
 #script -> main execution
-
 script:
+
+# ketika kodisi main execution  finish
+after_succes:
