change travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ before_script:
     - php artisan key.generate
 #script -> main execution
 script:
+    - ./vendor/bin/phpunit
 
 # ketika kodisi main execution  finish
 after_succes:
