--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ branches:
 before_script:
     - cp .env.travis .env
     - composer install --no-interaction
-    - php artisan key.generate
+    - php artisan key:generate
 #script -> main execution
 script:
     - ./vendor/bin/phpunit
